# axiom

./: .gitignore  README.md  pyrightconfig.json
core/: CMakeLists.txt
core/binding/: python_binding.cpp
core/include/: rng.hpp  simulator.hpp
core/include/games/: card_engine.hpp  peek_baccarat.hpp
core/src/: rng.cpp  simulator.cpp
core/src/games/: card_engine.cpp  peek_baccarat.cpp
docs/: QUICKSTART.md  README.md  STARTUP.md  peek_baccarat_rules.md
docs/archive/: original_spec_v2.docx
docs/game_math/: volatility_guide.md
docs/game_rules/: peek_baccarat_rules.md
middleware/: pyaxiom.pyi  requirements.txt  setup.py
middleware/axiom/: __init__.py  analyzer.py  reporter.py
middleware/tests/: test_simulation.py
web/backend/: main.py
web/frontend/: index.html  package-lock.json  package.json
web/frontend/css/: style.css
web/frontend/js/: app.js
web/frontend/src/: App.vue
web/frontend/src/components/: ControlPanel.vue  ConvergenceCharts.vue  MetricCards.vue  ReportViewer.vue
web/frontend_vanilla/: index.html
web/frontend_vanilla/js/: app.js
